@@ -160,7 +160,7 @@ Handler_Type MMonit_send(Event_T E) {
                         Log_error("M/Monit: cannot open a connection to %s\n", C->url->url);
                         goto error;
                 }
-                status_xml(sb, E, 2, Socket_getLocalHost(socket, (char[STRLEN]){}, STRLEN));
+                status_xml(sb, E, 2, Socket_getLocalHost(socket, (char[STRLEN]){}, STRLEN), C);
                 if (! _send(socket, C, sb)) {
                         Log_error("M/Monit: cannot send %s message to %s\n", E ? "event" : "status", C->url->url);
                         goto error;
